--- a/src/features/animal-commands/components/grid-map.css
+++ b/src/features/animal-commands/components/grid-map.css
@@ -157,12 +157,28 @@
         transform: translate(0, 0) scale(1);
     }
 
+    25% {
+        transform: translate(25%, -25%) scale(1.1);
+    }
+
     50% {
-        transform: translate(100%, -50%) scale(1.2);
+        transform: translate(50%, -35%) scale(1.15);
+    }
+
+    75% {
+        transform: translate(75%, -15%) scale(1.1);
+    }
+
+    90% {
+        transform: translate(100%, 0) scale(1.05);
+    }
+
+    95% {
+        transform: translate(100%, -3%) scale(1.02);
     }
 
     100% {
-        transform: translate(200%, 0) scale(1);
+        transform: translate(100%, 0) scale(1);
     }
 }
 
@@ -171,12 +187,28 @@
         transform: translate(0, 0) scale(1);
     }
 
+    25% {
+        transform: translate(-25%, -25%) scale(1.1);
+    }
+
     50% {
-        transform: translate(-100%, -50%) scale(1.2);
+        transform: translate(-50%, -35%) scale(1.15);
+    }
+
+    75% {
+        transform: translate(-75%, -15%) scale(1.1);
+    }
+
+    90% {
+        transform: translate(-100%, 0) scale(1.05);
+    }
+
+    95% {
+        transform: translate(-100%, -3%) scale(1.02);
     }
 
     100% {
-        transform: translate(-200%, 0) scale(1);
+        transform: translate(-100%, 0) scale(1);
     }
 }
 
@@ -185,13 +217,29 @@
         transform: translate(0, 0) scale(1);
     }
 
+    25% {
+        transform: translate(0, 25%) scale(1.1);
+    }
+
     50% {
-        transform: translate(0, 100%) scale(1.2);
+        transform: translate(0, 50%) scale(1.15);
+    }
+
+    75% {
+        transform: translate(0, 75%) scale(1.1);
+    }
+
+    90% {
+        transform: translate(0, 100%) scale(1.05);
+    }
+
+    95% {
+        transform: translate(0, 100%) scale(1.02);
     }
 
     /* Y is positive down */
     100% {
-        transform: translate(0, 200%) scale(1);
+        transform: translate(0, 100%) scale(1);
     }
 }
 
@@ -200,11 +248,27 @@
         transform: translate(0, 0) scale(1);
     }
 
+    25% {
+        transform: translate(0, -25%) scale(1.1);
+    }
+
     50% {
-        transform: translate(0, -100%) scale(1.2);
+        transform: translate(0, -50%) scale(1.15);
+    }
+
+    75% {
+        transform: translate(0, -75%) scale(1.1);
+    }
+
+    90% {
+        transform: translate(0, -100%) scale(1.05);
+    }
+
+    95% {
+        transform: translate(0, -100%) scale(1.02);
     }
 
     100% {
-        transform: translate(0, -200%) scale(1);
+        transform: translate(0, -100%) scale(1);
     }
 }
